[emacs] Simplify exar-insert-edid

--- a/emacs.org
+++ b/emacs.org
@@ -3618,8 +3618,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
 
   (defun exar-insert-edid (output)
     (interactive
-     (list
-      (let ((candidates
+     (let* ((candidates
              (mapcar
               (lambda (output)
                 (let* ((props (cdr output))
@@ -3641,8 +3640,11 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
                              (concat " " (string-join monitor-names " ")))
                            (concat " connected to " output-name))
                    output)))
-              (exar--get-connected-outputs (exar--get-outputs)))))
-        (cdr (assoc (completing-read "Monitor: " candidates nil t) candidates)))))
+              (exar--get-connected-outputs (exar--get-outputs))))
+            (output
+             (cdr
+              (assoc (completing-read "Monitor: " candidates nil t) candidates))))
+       (list output)))
     (insert (exar--get-in (cdr output) :edid :id)))
 
   ;;;###autoload
