[emacs] Resolve keybinding conflict with wdired

--- a/emacs.org
+++ b/emacs.org
@@ -4565,6 +4565,9 @@ Stavrou)]].
       (interactive)
       (koek-bngo/dired-enqueue-dwim t))
     :config
+    ;; Resolve keybinding conflict with wdired
+    (unbind-key "SPC" bongo-dired-library-mode-map)
+
     (bind-keys
      ("C-c k k" . koek-bngo/play-pause)
      :map bongo-dired-library-mode-map
