--- a/emacs.org
+++ b/emacs.org
@@ -4832,7 +4832,7 @@ Stavrou)]].
   ;;;###autoload
   (define-minor-mode prepcast-mode
     "Prepare for screencasting."
-    :global t
+    :global t :lighter " Prep"
     (if prepcast-mode
         (unless prepcast--unprep-fs
           (setq prepcast--unprep-fs
