--- a/emacs.org
+++ b/emacs.org
@@ -4730,7 +4730,10 @@ Stavrou)]].
      :map c++-mode-map
      ("C-c d d" . koek-dl/lookup-cpp)
      :map java-mode-map
-     ("C-c d d" . koek-dl/lookup-openjdk)))
+     ("C-c d d" . koek-dl/lookup-openjdk))
+
+    ;; Resolve keybinding conflict with company
+    (unbind-key "TAB" c-mode-base-map))
 
   (use-package cc-cmds
     :defer t
