[emacs] Rephrase comment

--- a/emacs.org
+++ b/emacs.org
@@ -5458,7 +5458,7 @@ Configure Conf mode afterwards.
     :straight t
     :mode (rx ".scad" string-end)
     :config
-    ;; Resolve smartparens' delayed post handlers not being called
+    ;; Resolve smartparens' handlers not being called
     (unbind-key "<return>" scad-mode-map) ; Why does <return> work but RET not?
 
     (setq scad-indent-style "stroustrup"))
