[emacs] Rephrase comment

--- a/emacs.org
+++ b/emacs.org
@@ -6014,8 +6014,7 @@ Disable menu bar, tool bar and scroll bars. Configuring this during
 early initialization reduces startup time.
 
 #+BEGIN_SRC emacs-lisp :tangle stow/emacs/.config/emacs/early-init.el
-  ;; Prefer setting frame parameters to disabling menu-bar-mode,
-  ;; tool-bar-mode and scroll-bar-mode during early initialization
+  ;; Prefer setting frame parameters to disabling modes
   (push '(menu-bar-lines . 0) default-frame-alist)
   (push '(tool-bar-lines . 0) default-frame-alist)
   (push '(vertical-scroll-bars . nil) default-frame-alist)
