[emacs] Tweak appearance mode line

--- a/emacs.org
+++ b/emacs.org
@@ -6183,7 +6183,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
               (concat (propertize (plist-get koek-ml/variant :label)
                                   'face 'koek-diff/variant)
                       (when-let ((state (plist-get koek-ml/variant :state)))
-                        (concat ":" state)))
+                        (concat " " state)))
               nil 'up)
             koek-ml/separator)))
       "Ediff mode line construct.")
@@ -6390,7 +6390,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                (concat name " "))
             ,(pcase (koek-ml/get-flymake-state)
                (`running
-                "- -")
+                "-;-")
                (`finished
                 (let ((n-diags (koek-ml/get-flymake-n-diags)))
                   (mapconcat
@@ -6398,7 +6398,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                      (propertize
                       (number-to-string (alist-get cat n-diags 0))
                       'face (flymake--lookup-type-property cat 'mode-line-face)))
-                   '(flymake-error flymake-warning) " ")))
+                   '(flymake-error flymake-warning) ";")))
                (state
                 (koek-ml/state-to-description state))))))
       "Flymake mode line construct.")
@@ -6494,10 +6494,10 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                        "empty")))
                (state (concat diff
                               (when (and diff merge)
-                                ":")
+                                ";")
                               merge
                               (when (and (or diff merge) ancestor)
-                                ":")
+                                ";")
                               ancestor)))
           (unless (string-empty-p state)
             state))))
