[emacs] Show number of info diagnostics in mode line

--- a/emacs.org
+++ b/emacs.org
@@ -6390,7 +6390,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                (concat name " "))
             ,(pcase (koek-ml/get-flymake-state)
                (`running
-                "-;-")
+                "-;-;-")
                (`finished
                 (let ((n-diags (koek-ml/get-flymake-n-diags)))
                   (mapconcat
@@ -6398,7 +6398,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                      (propertize
                       (number-to-string (alist-get cat n-diags 0))
                       'face (flymake--lookup-type-property cat 'mode-line-face)))
-                   '(flymake-error flymake-warning) ";")))
+                   '(flymake-error flymake-warning flymake-note) ";")))
                (state
                 (koek-ml/state-to-description state))))))
       "Flymake mode line construct.")
