[emacs] Tweak getting agenda buffer

--- a/emacs.org
+++ b/emacs.org
@@ -7021,7 +7021,7 @@ Show agenda as initial buffer.
     (let ((layout (current-window-configuration)))
       (org-agenda-list)
       (set-window-configuration layout))
-    (get-buffer "*Org Agenda*"))
+    org-agenda-buffer)
 
   (setq initial-buffer-choice #'koek/get-initial-buffer)
 #+END_SRC
