--- a/emacs.org
+++ b/emacs.org
@@ -6288,7 +6288,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
       '(:eval
         (moody-tab
          (concat
-          (when (and koek-ml/project-spec (derived-mode-p 'prog-mode))
+          (when (and koek-ml/project-spec (derived-mode-p 'prog-mode 'conf-mode))
             (concat (koek-ml/truncate (plist-get koek-ml/project-spec :name) 16) "/"))
           (propertize (koek-ml/truncate (buffer-name) 32)
                       'face 'mode-line-buffer-id))))
