[emacs] Update mode line after setting mode line variables

--- a/emacs.org
+++ b/emacs.org
@@ -2958,7 +2958,8 @@ steps.
         (:around (f &rest args) koek-ace/disable-setup-mode-line)
       (let ((format (default-value 'mode-line-format)))
         (apply f args)
-        (setq-default mode-line-format format)))
+        (setq-default mode-line-format format)
+        (force-mode-line-update 'all)))
     :config
     (setq aw-scope 'frame)
     (setq aw-swap-invert t)
@@ -4734,7 +4735,8 @@ Stavrou)]].
         (:around (f) koek-cc/disable-update-mode-name)
       (let ((name mode-name))
         (funcall f)
-        (setq mode-name name))))
+        (setq mode-name name)
+        (force-mode-line-update))))
 
   (use-package cc-vars
     :defer t
