--- a/emacs.org
+++ b/emacs.org
@@ -4207,7 +4207,7 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
         (ispell-message)
         (unless (or (= (buffer-chars-modified-tick) tick)
                     (y-or-n-p "Spelling checked.  Send? "))
-          (error "%s" "Send aborted"))))
+          (user-error "%s" "Send aborted"))))
     :config
     (setq message-send-mail-function #'smtpmail-send-it)
     (setq message-beginning-of-line nil)
