[emacs] Fix restoring window configuration on ediff quit

--- a/emacs.org
+++ b/emacs.org
@@ -269,12 +269,14 @@ VC is a placeholder.
     :preface
     (define-advice ediff-setup
         (:around (f &rest args) koek-diff/setup-restore-window-config)
-      (let ((config (current-window-configuration)))
-        (with-current-buffer (apply f args)
+      (let ((config (current-window-configuration))
+            (control-buffer (apply f args)))
+        (with-current-buffer control-buffer
           (add-hook 'ediff-quit-hook
                     (lambda ()
                       (set-window-configuration config))
-                    'append 'local)))))
+                    'append 'local))
+        control-buffer)))
 
   (use-package ediff-wind
     :defer t
