[emacs] Prefer if to combination of or and and

--- a/emacs.org
+++ b/emacs.org
@@ -202,8 +202,7 @@ For org configuration, see [[*Org][Org]].
     (setq dired-recursive-deletes 'always)
     (let* ((safe "-lah") ; For safe switches, see `ls-lisp--insert-directory'
            (unsafe (concat safe " --group-directories-first")))
-      (setq dired-listing-switches
-            (or (and (executable-find "ls") unsafe) safe))))
+      (setq dired-listing-switches (if (executable-find "ls") unsafe safe))))
 
   (use-package dired-aux
     :after dired
@@ -3013,9 +3012,7 @@ steps.
   horizontally."
     (let* ((width (nth 2 (frame-monitor-geometry)))
            (step (/ width koek-wind/n-hor-steps))
-           (delta (if shrink
-                      (* step -1)
-                    step)))
+           (delta (if shrink (* step -1) step)))
       (window-resize nil delta (not vertical) nil 'pixelwise)))
 
   (defun koek-wind/grow (&optional arg)
@@ -3210,7 +3207,7 @@ Bury unneeded buffers, computers have more than enough memory.
       (interactive "P")
       (let ((kill-emacs-hook ; Dynamic variable, restore when kill is aborted
              (append kill-emacs-hook
-                     (list (or (and arg #'koek-wm/reboot) #'koek-wm/power-off)))))
+                     (list (if arg #'koek-wm/reboot #'koek-wm/power-off)))))
         (save-buffers-kill-terminal)))
 
     (defun koek-wm/suspend ()
@@ -3225,7 +3222,7 @@ Bury unneeded buffers, computers have more than enough memory.
       (interactive "P")
       (make-process
        :name "firefox"
-       :command `("firefox" ,(or (and arg "--private-window") "--new-window"))))
+       :command `("firefox" ,(if arg "--private-window" "--new-window"))))
     :config
     ;; Only when package is loaded
     (bind-keys
@@ -4400,9 +4397,9 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
                 (expand-file-name
                  (read-directory-name
                   "vCard directory: "
-                  (or (and (file-accessible-directory-p bbdb-vcard-default-dir)
-                           bbdb-vcard-default-dir)
-                      default-directory)
+                  (if (file-accessible-directory-p bbdb-vcard-default-dir)
+                      bbdb-vcard-default-dir
+                    default-directory)
                   nil t)))))
          (list file-name 'interactive)))
       (require 'bbdb-vcard)
@@ -4419,7 +4416,7 @@ To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniver
              (n-records (length records)))
         (when interactive
           (message "%d %s imported"
-                   n-records (or (and (= n-records 1) "vCard") "vCards")))))
+                   n-records (if (= n-records 1) "vCard" "vCards")))))
     :config
     ;; Contacts sharing a landline telephone aren't duplicates
     (setq bbdb-vcard-try-merge nil))
@@ -4489,7 +4486,7 @@ Configure elfeed afterwards.
         (dolist (entry entries)
           (bongo-insert-uri (elfeed-entry-link entry)
                             (elfeed-entry-title entry)))
-        (bongo-enqueue-region (or (and next 'insert) 'append)
+        (bongo-enqueue-region (if next 'insert 'append)
                               (point-min) (point-max)
                               'maybe-display-playlist)))
 
@@ -4882,7 +4879,7 @@ Stavrou)]].
       (with-temp-bongo-library-buffer
         (dolist (file-name file-names)
           (bongo-insert-file file-name))
-        (bongo-enqueue-region (or (and next 'insert) 'append)
+        (bongo-enqueue-region (if next 'insert 'append)
                               (point-min) (point-max)
                               'maybe-display-playlist)))
 
@@ -5449,9 +5446,9 @@ Configure conf-mode afterwards.
             '(:eval
               ;; When mode-name is evaluated during mode line update,
               ;; inhibit-mode-name-delight is unbound or false
-              (or (and (not (bound-and-true-p inhibit-mode-name-delight))
-                       (alist-get major-mode koek-conf/mode-names))
-                  "Conf")))))
+              (if (not (bound-and-true-p inhibit-mode-name-delight))
+                  (alist-get major-mode koek-conf/mode-names)
+                "Conf")))))
 #+END_SRC
 
 ** Emacs Lisp
@@ -5942,7 +5939,7 @@ part of tangling [[*yasnippet - Snippets][embedded snippets]].
   NAME is a string, the name of the person.  AGE is an integer, the
   age of the person.  _AGE-SUFFIX is ignored."
       (format "[[bbdb:%s][%s (%d %s old)]]"
-              name name age (or (and (= age 1) "year") "years")))
+              name name age (if (= age 1) "year" "years")))
     :config
     ;; BBDB anniversary (many, any type) and vCard ANNIVERSARY (one, any
     ;; type except birthday) aren't compatible, birthday and BDAY are
@@ -6311,8 +6308,7 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
          "-id" ,(frame-parameter frame 'outer-window-id)
          "-f" "_GTK_THEME_VARIANT" "8u"
          "-set" "_GTK_THEME_VARIANT"
-         ,(or (and (memq (car custom-enabled-themes) koek-thm/dark-themes) "dark")
-              "")))))
+         ,(if (memq (car custom-enabled-themes) koek-thm/dark-themes) "dark" "")))))
 
   (defun koek-thm/update-frame-theme-variant ()
     "Update theme variant of all frames."
@@ -6330,9 +6326,8 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
   vivendi."
       (pcase-let* ((koek-thm/enable-hook nil) ; Dynamic variable
                    (themes '(modus-operandi modus-vivendi))
-                   (`(,new ,old) (if (eq variant 'operandi)
-                                            themes
-                                          (reverse themes))))
+                   (`(,new ,old)
+                    (if (eq variant 'operandi) themes (reverse themes))))
         (when (custom-theme-enabled-p old)
           (disable-theme old))
         (unless (custom-theme-p new)
@@ -6355,8 +6350,7 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
       "Toggle Modus theme variant."
       (interactive)
       (koek-thm/load-modus
-       (or (and (eq (car custom-enabled-themes) 'modus-operandi) 'vivendi)
-           'operandi)))
+       (if (eq (car custom-enabled-themes) 'modus-operandi) 'vivendi 'operandi)))
     :init
     (bind-key "C-c z t" #'koek-thm/toggle-modus-variant)
 
@@ -6792,8 +6786,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
           (let ((state (koek-ml/get-variant-state type)))
             (with-current-buffer buffer
               (setq koek-ml/variant
-                    (list :label (or (and (eq type 'Ancestor) "Anc")
-                                     (symbol-name type))
+                    (list :label (if (eq type 'Ancestor) "Anc" (symbol-name type))
                           :state state))
               (force-mode-line-update))))))
 
