[emacs] Rework expanding file names

--- a/emacs.org
+++ b/emacs.org
@@ -34,6 +34,7 @@ Require libraries.
 #+BEGIN_SRC emacs-lisp
   (require 'subr-x)
   (require 'seq)
+  (require 'xdg)
 #+END_SRC
 
 * Bootstrap
@@ -4210,10 +4211,9 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
   (use-package mu4e-vars
     :defer t
     :config
-    (let ((config
-           (expand-file-name "isync/mbsyncrc"
-                             (or (getenv "XDG_CONFIG_HOME") "~/.config/"))))
-      (setq mu4e-get-mail-command (format "mbsync -c %s -a" config)))
+    (setq mu4e-get-mail-command
+          (format "mbsync -c %s -a"
+                  (expand-file-name "isync/mbsyncrc" (xdg-config-home))))
     ;; When moving e-mail, isync expects them to be renamed
     (setq mu4e-change-filenames-when-moving t)
 
@@ -6923,9 +6923,7 @@ Configure monitors and monitor layouts.
     :koek t
     :after exwm
     :config
-    (let ((icc-dir
-           (expand-file-name "icc/"
-                             (or (getenv "XDG_DATA_HOME") "~/.local/share/"))))
+    (let ((icc-dir (expand-file-name "icc/" (xdg-data-home))))
       (setq exar-monitors
             `(:laptop (:edid "0x06af3d13000000002617" :name "Laptop"
                        :color ,(expand-file-name "laptop.icc" icc-dir))
