--- a/emacs.org
+++ b/emacs.org
@@ -3191,6 +3191,47 @@ Bury unneeded buffers, computers have more than enough memory.
     :straight t
     :when (string= (getenv "XDG_CURRENT_DESKTOP") "EXWM")
     :preface
+    (defun koek-wm/get-process-args (id)
+      "Return arguments of process id ID.
+  ID is an integer, the process id of the process."
+      (when-let ((args (alist-get 'args (process-attributes id))))
+        (let ((normalized
+               (thread-last args
+                 (replace-regexp-in-string (rx "\\ ") "\N{NO-BREAK SPACE}")
+                 (replace-regexp-in-string (rx (one-or-more " ")) "\N{NULL}")
+                 (replace-regexp-in-string "\N{NO-BREAK SPACE}" " "))))
+          (split-string normalized "\N{NULL}"))))
+
+    (defun koek-wm/get-process-ids (name)
+      "Return process ids of process NAME.
+  NAME is a string, the name of the process."
+      (seq-filter (lambda (id)
+                    (when-let ((args (koek-wm/get-process-args id)))
+                      (let ((nm (thread-first args
+                                  car
+                                  (split-string "/")
+                                  last
+                                  car)))
+                        (string-equal nm name))))
+       (list-system-processes)))
+
+    (defun koek-wm/set-xsettingsd-preset ()
+      "Set xsettingsd configuration preset.
+  When current theme is a dark theme, set configuration preset to
+  dark, else, set it to light."
+      (when-let ((id (car (koek-wm/get-process-ids "xsettingsd"))))
+        (let* ((preset (if (koek-thm/darkp) "dark" "light"))
+               (preset-file
+                (thread-last (xdg-data-home)
+                  (expand-file-name "xsettingsd/presets/")
+                  (expand-file-name preset)))
+               (config-file
+                (expand-file-name "xsettingsd/xsettingsd" (xdg-config-home))))
+          ;; Third argument truthy overwrites existing link, docstring
+          ;; only mentions not signaling an error
+          (make-symbolic-link preset-file config-file 'overwrite)
+          (signal-process id 'SIGHUP))))
+
     ;; For systemctl power management commands, see
     ;; https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html/configuring_basic_system_settings/managing-services-with-systemd_configuring-basic-system-settings#shutting-down-suspending-hibernating-system_managing-services-with-systemd
     (defun koek-wm/power-off ()
@@ -3229,7 +3270,9 @@ Bury unneeded buffers, computers have more than enough memory.
     (bind-keys
      ("C-c z p" . koek-wm/kill-power-off)
      ("C-c z z" . koek-wm/suspend)
-     ("C-c x C-f" . koek-wm/launch-firefox)))
+     ("C-c x C-f" . koek-wm/launch-firefox))
+
+    (add-hook 'koek-thm/enable-hook #'koek-wm/set-xsettingsd-preset))
 
   (use-package exwm-input
     :defer t
